--- a/foodOrdingSystem/template/account/signIn.html
+++ b/foodOrdingSystem/template/account/signIn.html
@@ -1,31 +1,30 @@
-{% load static %}
 {% extends 'base.html' %}
+{% block title %}SignIn{% endblock title %}
 {% block body %}
   
 <div class="text-center">   
-    <main class="form-signin">
-      <form>
-        <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-    
+  <main class="form-signin">
+    <form method="post" action="{% url 'signIn' %}">
+      {% csrf_token %}
+        <img class="mb-4" src="../static/img/fast-food.png"  width="40%" height="40%">
+        <h1 class="h3 mb-3 fw-normal">SignIn to Foodia</h1>
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+          <input type="email" name="username" class="form-control" id="floatingInput" placeholder="name@example.com" required>
           <label for="floatingInput">Email address</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" required>
           <label for="floatingPassword">Password</label>
-        </div>
-    
+        </div>    
         <div class="checkbox mb-3">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
-      </form>
-    </main>    
-    </div>
+    </form>
+  </main>
+</div>
     
 {% endblock body %}
