--- a/foodOrdingSystem/template/account/signUp.html
+++ b/foodOrdingSystem/template/account/signUp.html
@@ -1,30 +1,31 @@
 {% extends 'base.html' %}
+{% block title %}Create Account{% endblock title %}
 {% block body %}
   
 <div class="text-center">   
     <main class="form-signin">
-      <form>
-        <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-    
+      <form method="post" action="{% url 'signUp' %}">
+        {% csrf_token %}
+        <img class="mb-4" src="" alt="" width="72" height="57">
+        <h1 class="h3 mb-3 fw-normal">Create Foodia Account</h1>    
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
+          <input type="text" name="name" class="form-control" placeholder="Name" required>
+          <label>Name</label>
         </div>
+
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-          <label for="floatingPassword">Password</label>
+          <input type="email" name="email"  class="form-control" placeholder="name@example.com" required>
+          <label>Email</label>
         </div>
-    
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+
+        <div class="form-floating">
+          <input type="password" name="password"  class="form-control" placeholder="*********" required>
+          <label>Password</label>
+        </div>  
+
+        <button class="w-100 btn btn-lg btn-dark" type="submit">Create Account</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
       </form>
     </main>    
-    </div>
-    
+    </div>    
 {% endblock body %}
