--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><title>{% block title %}{% endblock title %}</title></title>
+    <link rel="icon" type="image/png" href="{% static 'img/fast-food.png' %}">
+
+    <title>{% block title %}{% endblock title %} | Foodia</title>
      <!-- Bootstrap core CSS -->
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 <style>
@@ -34,19 +36,6 @@
     .form-signin .form-floating:focus-within {
       z-index: 2;
     }
-    
-    .form-signin input[type="email"] {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-    
-    .form-signin input[type="password"] {
-      margin-bottom: 10px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-    }
-
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
@@ -56,8 +45,8 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="/">Foodia</a>
+            <div class="container-fluid"><img src="{% static 'img/fast-food.png' %}" class="img-fluid" width="4%" height="4%">
+              <a class="navbar-brand" href="/">&nbsp;Foodia</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
