--- a/foodOrdingSystem/template/foodStuff/index.html
+++ b/foodOrdingSystem/template/foodStuff/index.html
@@ -1,1 +1,10 @@
 {% extends 'base.html' %}
+        
+{% if messages %}
+       
+{% for message in messages %}
+<div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</div>
+{% endfor %}
+
+  
+{% endif %}
