--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -81,6 +81,6 @@
             <footer class="pt-5 my-5 text-muted border-top">
                 Created by the Bootstrap team &middot; &copy; 2021
             </footer>  
-        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
     </body>
 </html>   
