--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -10,6 +10,7 @@
     <title>{% block title %}{% endblock title %} | Foodia</title>
      <!-- Bootstrap core CSS -->
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'css/all.min.css' %}" rel="stylesheet">
 <style>
     body {
         
@@ -82,5 +83,6 @@
                 Created by the Bootstrap team &middot; &copy; 2021
             </footer>  
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/all.min.js' %}"></script>
     </body>
 </html>   
