--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -47,34 +47,37 @@
 <body>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid"><img src="{% static 'img/fast-food.png' %}" class="img-fluid" width="4%" height="4%">
-              <a class="navbar-brand" href="/">&nbsp;Foodia</a>
+              <a class="navbar-brand" href="/foodStuff">&nbsp;Foodia</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/foodStuff">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="/foodStuff">Action</a></li>
+                      <li><a class="dropdown-item" href="/foodStuff">Another action</a></li>
+                      <li><a class="dropdown-item" href="/foodStuff">Something else here</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="/foodStuff/about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/foodStuff/contact">Contact</a>
                   </li>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+
+                <form class="d-flex" method="get" action="{% url 'foodSearch' %}">
+                  {% csrf_token %}
+                    <input class="form-control me-2" type="search" name="foodProductSearch" placeholder="Search" aria-label="Search" required>
+                    <button class="btn btn-outline-light" type="submit"><i class="fas fa-search"></i></button>
+                  </form> 
+
               </div>
             </div>
           </nav>  
