--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -76,8 +76,12 @@
                   {% csrf_token %}
                     <input class="form-control me-2" type="search" name="foodProductSearch" placeholder="Search" aria-label="Search" required>
                     <button class="btn btn-outline-light" type="submit"><i class="fas fa-search"></i></button>
-                  </form> 
-
+                  </form>
+                  &nbsp;
+                  <button class="btn btn-outline-light">
+                    <span class="fas fa-pizza-slice">
+                  </span> 0
+                  </button>
               </div>
             </div>
           </nav>  
