--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -89,6 +89,13 @@
                     0
                   {% endif %}
                   </button>
+                  &nbsp;
+                  {% if userProfile %}
+                    {% else %}
+                    <button class="btn btn-outline-light"><i class="fa fa-user"></i> login</button>
+                  {% endif %}
+
+
               </div>
             </div>
           </nav>  
