--- a/foodOrdingSystem/template/foodStuff/foodDescription.html
+++ b/foodOrdingSystem/template/foodStuff/foodDescription.html
@@ -22,10 +22,10 @@
                             <p>{{productDescription.foodProductDescription}}</p>
                             <hr class="m-0 pt-2 mt-2">
                         </div>
-                        <div class="col-lg-12">
+                      <!-- <div class="col-lg-12">
                             <h6>Quantity :</h6>
-                            <input type="number" class="form-control text-center w-100" min="1" value="1">
-                        </div>
+                            <input type="number" class="form-control text-center w-100" name="foodQty" onchange="submition({{productDescription.uid}})" min="1" value="1">
+                        </div>--> 
                         <div class="col-lg-12 mt-3">
                             <div class="row">
                                 <div class="col-lg-6 pb-2">
@@ -47,4 +47,3 @@
         </div>       {% endif %}
 </div>    
 {% endblock body %}
-    
