--- a/foodOrdingSystem/template/account/signIn.html
+++ b/foodOrdingSystem/template/account/signIn.html
@@ -30,7 +30,12 @@
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
+          <p>
+
+            <a href="{% url 'signUp' %}">Create new account?</a>
+          </p>
         </div>
+
         <button class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
     </form>
