--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -155,9 +155,9 @@
                        
                       <ul class="dropdown-menu" aria-labelledby="dropdown01"> 
                         <li><a class="dropdown-item" href="{% url 'userProfile' %}">Profile</a></li>  
-                      <li><a class="dropdown-item" href="#">Logout</a></li>
+                      <li><a class="dropdown-item" href="{% url 'signOut' %}">Logout</a></li>
                       {% else %}
-                    <button class="btn btn-outline-light"><i class="fa fa-user"></i> login</button>
+                    <button class="btn btn-outline-light" onclick="window.location.href='/account/signIn';"><i class="fa fa-user"></i> login</button>
                   {% endif %}
                     
                     </ul></span>
@@ -168,9 +168,12 @@
     {% block body %}{% endblock body %}    
             <footer class="pt-5 my-5 text-muted border-top">
                 Created by the Bootstrap team &middot; &copy; 2021
-            </footer>  
+            </footer>  {% url 'signIn' %}
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/all.min.js' %}"></script>
+        <script>
+          
+        </script>
     </body>
 </html>   
 
