--- a/foodOrdingSystem/template/account/ordersProfile.html
+++ b/foodOrdingSystem/template/account/ordersProfile.html
@@ -86,12 +86,12 @@
                       <tr>
                         <td>
                           <div class="d-flex align-items-center">
-                            <img
-                                src="https://mdbootstrap.com/img/new/avatars/8.jpg"
+                           <!--<img
+                                src="/media/{{product.foodProductImage}}"
                                 alt=""
                                 style="width: 45px; height: 45px"
                                 class="rounded-circle"
-                                />
+                                />--> 
                           </div>
                         </td>
                         <td>
