--- a/foodOrdingSystem/template/account/resetPassword.html
+++ b/foodOrdingSystem/template/account/resetPassword.html
@@ -48,8 +48,13 @@
       </div>
       <div style="padding-left: 15%;padding-right: 15%;">
 
-
-        Reset Password
+        <form method="post">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button class="btn btn-dark" type="submit">Change Password</button>
+        </form>
+        
+       
 
       </div>
 
