--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -168,7 +168,7 @@
     {% block body %}{% endblock body %}    
             <footer class="pt-5 my-5 text-muted border-top">
                 Created by the Bootstrap team &middot; &copy; 2021
-            </footer>  {% url 'signIn' %}
+            </footer>  
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/all.min.js' %}"></script>
         <script>
