--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -113,20 +113,20 @@
 <body>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid"><img src="{% static 'img/fast-food.png' %}" class="img-fluid" width="4%" height="4%">
-              <a class="navbar-brand" href="/foodStuff">&nbsp;Foodia</a>
+              <a class="navbar-brand" href="/">&nbsp;Foodia</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/foodStuff">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/foodStuff/about">About</a>
+                    <a class="nav-link" href="/about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/foodStuff/contact">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                 </ul>
 
@@ -137,7 +137,7 @@
                     
                   </form>
                   &nbsp;
-                  <button class="btn btn-outline-light" onclick="window.location.href='/foodStuff/foodCart'">
+                  <button class="btn btn-outline-light" onclick="window.location.href='/foodCart'">
                     <span class="fas fa-pizza-slice">
                   </span> 
                                         
