--- a/foodOrdingSystem/template/foodStuff/foodProducts.html
+++ b/foodOrdingSystem/template/foodStuff/foodProducts.html
@@ -31,7 +31,7 @@ Search
           {% if foodProduct %}          
           {% for product in foodProduct  %} 
           <!--foodCategory-->
-          <a href="/foodStuff/foodDescription/{{product.uid}}" class="text-dark" style="text-decoration: none;">        
+          <a href="/foodDescription/{{product.uid}}" class="text-dark" style="text-decoration: none;">        
           <div class="col">
             <div class="card shadow-sm">
               <img class="bd-placeholder-img card-img-top" width="100%" height="250px" src="/media/{{product.foodProductImage}}">
